fixed facebook login location, fixed some spacing stuff.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -28,3 +28,6 @@
 //
 // Example:
 // @linkColor: #ff0000;
+.span2{
+	width: 152px;
+}
